DigicielFull/force-app/main/default/objects/valt__Valooto_Workflow__c/valt__Valooto_Workflow__c.object-meta.xml
<CustomObject>
    <label>Valooto Workflow</label>
    <nameField>
        <label>Valooto Worklfow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Valooto Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>