DigicielFull/force-app/main/default/objects/valt__Valooto_Workflow__c/fields/valt__Comment__c.field-meta.xml
<CustomField>
    <fullName>valt__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>