DigicielFull/force-app/main/default/objects/valt__Valooto_Workflow__c/fields/valt__Reasons__c.field-meta.xml
<CustomField>
    <fullName>valt__Reasons__c</fullName>
    <label>Reasons</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>