DigicielFull/force-app/main/default/objects/valt__Valooto_Workflow__c/fields/valt__Status__c.field-meta.xml
<CustomField>
    <fullName>valt__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>