DigicielFull/force-app/main/default/objects/valt__Valooto_Workflow__c/fields/valt__Status_Date__c.field-meta.xml
<CustomField>
    <fullName>valt__Status_Date__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>