DigicielFull/force-app/main/default/objects/valt__Valooto_Workflow__c/fields/valt__User__c.field-meta.xml
<CustomField>
    <fullName>valt__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Valooto_Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>