DigicielFull/force-app/main/default/objects/valt__Valooto_Workflow__c/fields/valt__User_Name__c.field-meta.xml
<CustomField>
    <fullName>valt__User_Name__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>